--- a/photos/templates/all-photos/home.html
+++ b/photos/templates/all-photos/home.html
@@ -1,6 +1,3 @@
-{%extends 'all-photos/base.html'%}
-
-{% block content %}
-{{block.super}}
-<h1>hello world</h1>
+{%extends 'all-photos/base.html'%} {% block content %} {{block.super}}
+<h1 class="text-center">hello world</h1>
 {% endblock %}
