--- a/photos/static/css/style.css
+++ b/photos/static/css/style.css
@@ -1,1 +1,53 @@
-h1{color:green}
+h1 {
+    color: green
+}
+
+.searchform {
+    background-color: transparent;
+}
+
+.searchform .search {
+    width: 40%;
+    position: relative;
+    display: flex;
+    left: 40%;
+}
+
+.searchform .searchTerm {
+    width: 40%;
+    border: 1px solid black;
+    border-right: none;
+    padding: 24px;
+    border-radius: 20px 0 0 20px;
+    outline: none;
+    color: #5e4545;
+    text-align: center;
+}
+
+.searchform .searchTerm:focus,
+*:focus {
+    outline: none;
+}
+
+.searchform .searchButton {
+    width: 40px;
+    height: 50px;
+    border: 1px solid black;
+    border-left: none;
+    background: transparent;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 20px 20px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+button:focus {
+    border: none;
+    outline: none;
+}
+
+.searchform .searchButton i {
+    color: #000;
+    border: none;
+}
