--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark custnav">
     <div class="container bg-success">
         <a class="navbar-brand brand-rand" href="/">Joseph Gallery</a>
-        <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -15,3 +14,11 @@
 
     </div>
 </nav>
+<form class="d-flex d-flex flex-column justify-content-center align-items-center mt-5 mb-3" role="search" action='{% url "search_results" %}'>
+    <div class="searchform">
+        <div class="search">
+            <input class="form-control me-2 searchTerm" name="search" type="search" placeholder="Search Photos Category..." aria-label="Search">
+            <button type="submit" class="searchButton"><i class="fad fa-search"></i></button>
+        </div>
+    </div>
+</form>
