--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark custnav">
-    <div class="container bg-success">
-        <a class="navbar-brand brand-rand" href="/">Joseph Gallery</a>
+<nav class="custnav">
+    <div class="container">
+        <a class="navbar-brand brand-rand btn btn-outline-primary" href="/">Joseph Gallery</a>
         <span class="navbar-toggler-icon"></span>
-      </button>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active mr-4 ml-4" aria-current="page" href="/">Home</a>
+                    <a class="nav-link active mr-4 ml-4 btn btn-primary" aria-current="page" href="/">Home</a>
                 </li>
             </ul>
         </div>
