--- a/photos/templates/all-photos/home.html
+++ b/photos/templates/all-photos/home.html
@@ -1,3 +1,60 @@
-{%extends 'all-photos/base.html'%} {% block content %} {{block.super}}
-<h1 class="text-center">hello world</h1>
-{% endblock %}
+{% extends 'all-photos/base.html' %} {% block content %}
+<div class="cate1">
+    <ul class='cate text-md-center'>
+        <span>Categories:</span> {% if all_category %} {% for cate in all_category %}
+        <li><a class="btn btn-primary" href="/search/?search={{ cate.category }}">{{ cate.category }}</a></li>
+        {% endfor %} {% else %}
+        <p>No Categories at the Moments</p>
+        {% endif %}
+    </ul>
+
+</div>
+
+<div class="dropdown">
+    <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown">
+    FILTER BY LOCATION
+  </button>
+    <div class="dropdown-menu">
+        {% for location in all_location %}
+        <a class="dropdown-item btn btn-primary m-3"  href=" /?location={{location.location}} ">{{location.location}}</a>
+        <div class="dropdown-divider "></div>
+        {% endfor %}
+    </div>
+</div>
+
+<hr>
+
+<div class="landing ">
+    <h1 class="text-center mt-5 mb-5 ">Photo Gallery</h1>
+</div>
+
+<div class="wrapper-grid justify-content-center align-items-center text-center ">
+    {% for photo in all_photos %}
+    <div class="photo " data-target="#modal{{photo.id}} ">
+        <img src="{{ photo.image.url }} " alt="{{ photo.image_name }} " class='img-fluid landingimg'>
+        <div class="d-flex justify-content-center align-items-center ">
+            <p class='text-center hanger'>{{photo.image_name}}</p>
+        </div>
+    </div>
+    <div class="modal " id="modal{{photo.id}} ">
+        <div class="d-flex justify-content-between align-items-center p-1 toptitle ">
+            <h2 class='text-center'>{{photo.image_name}}</h2>
+            <button class="btn close-modal ">&times;</button>
+        </div>
+        <div class="body ">
+            <img src="{{ photo.image.url }} " alt="{{ photo.image_name }} " class='img-fluid overlayimg'>
+            <div class="d-flex justify-content-around align-items-center mt-3 ">
+                <p>Location: {{ photo.location_id }}</p>
+                <p>Category: {{ photo.category_id }}</p>
+            </div>
+            <p>{{ photo.image_desc }}</p>
+            <div>
+                <input type="text " value='https://josephgallery.herokuapp.com{{ photo.image.url }}' class="copylink " id="trial{{photo.id}} ">
+                <span class="btncopy " id="cpybtn{{ photo.id }} ">Copy Image Link <i class="fad fa-copy text-white copyicon " style="font-size: 25px; "></i></span>
+            </div>
+        </div>
+    </div>
+    <div id="overlay "></div>
+    {% endfor %}
+</div>
+<hr> {% endblock %}
