--- a/photos/static/css/style.css
+++ b/photos/static/css/style.css
@@ -91,7 +91,7 @@ button:focus {
 
 .wrapper-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1rem));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     justify-content: center;
 }
 
@@ -110,7 +110,6 @@ button:focus {
     margin: 5px;
 }
 
-
 .hanger {
     background-color: white;
     min-width: 80px;
@@ -119,4 +118,63 @@ button:focus {
     border-radius: 20px;
     border-bottom: 2px solid;
     box-shadow: 0px 2px 4px black;
-} 
+}
+
+.overlayimg {
+    border: 5px solid #fff;
+    border-radius: 5px;
+}
+
+.close-modal {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: white;
+}
+
+.close-modal:hover {
+    color: red;
+}
+
+.modal {
+    max-width: 850px;
+    /* min-height: 500px; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+    transition: top 0.3s ease-in-out;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    z-index: 2;
+    background-color: rgb(0, 0, 0);
+    padding: 20px;
+    overflow-y: auto;
+    box-shadow: 0px 5px 5px white;
+}
+
+.modal.active {
+    top: 50%;
+    display: block;
+    height: 700px;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.72);
+}
+
+#overlay.active {
+    display: block;
+}
+
+i .copyicon {
+    font-size: 20px;
+    color: green;
+}
